--- a/assets/base.css
+++ b/assets/base.css
@@ -92,3 +92,125 @@ ul {
 .p-2 { padding: 2rem; }
 
 .border-b-3 { border-bottom: 0.3rem solid !important; }
+
+form {
+  display: flex;
+  font-size: 1.7rem;
+  justify-content: center;
+  margin: 15px 0;
+  padding: 0.8rem;
+  width: 100%;
+}
+
+form input {
+  padding: 10px;
+  font-size: 17px;
+  border: none;
+  outline: none;
+  /* border-radius: 15; */
+  border-top-left-radius: 17px;
+  border-bottom-left-radius: 17px;
+  max-width: 500px;
+  transition: background-color 200ms ease-in-out;
+  width: 100%;
+}
+
+form input.input {
+  background-color: #01394c;
+  color: white;
+}
+
+form input.input::placeholder {
+  color: white;
+  opacity: 0.7;
+}
+
+form input:hover {
+  cursor: text;
+}
+
+button.button {
+  background-color: #002837;
+  color: white;
+}
+
+button.button:hover {
+  background-color: #001f29;
+}
+
+form button {
+  padding: 10px;
+  font-size: 17px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  min-width: 100px;
+}
+
+#myUnOrdList {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 1200px;
+}
+
+.todo-list {
+  min-width: 25%;
+
+  /* To remove the bullets of unordered list */
+  list-style: none;
+}
+
+.todo {
+  margin: 1rem;
+  /* background: rgb(247, 226, 223); */
+  /* color: black; */
+  font-size: 19px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.25em 0.5em;
+  border-radius: 30px;
+  transition: background-color 200ms ease-in-out;
+}
+
+.todo li{
+  padding: 7px;
+  /* word-wrap: break-word; */
+  /* flex-wrap: wrap; */
+  font-size: 20px;
+  flex: 1; /* To push the trash and the check button to the right */
+  border-radius: 30px;
+
+  /* wraps the links */
+  overflow-wrap: anywhere;
+}
+
+.check-btn, .delete-btn {
+  font-size: 19px;
+  cursor: pointer;
+  width: 2em;
+  height: 2em;
+  border-radius: 80%;
+  margin: 0 5px;
+}
+
+.todo-item {
+  padding: 0rem 0.5rem;
+}
+
+.fa-trash, .fa-check { 
+  pointer-events: none;
+}
+
+
+.completed {
+  transition: 0.2s;
+  text-decoration: line-through;
+  opacity: 0.5;
+}
+
+.fall {
+  transition: 0.5s;
+  transform: translateY(45rem) rotateZ(45deg);
+  opacity: 0;
+}
